# CLIP

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yaml
include/CLIP/: List.h  Map.h  Queue.h  Set.h  Stack.h  Test.h
include/CLIP/Parsers/: json.h
src/: main.c
src/Parsers/: json.c
tests/: test_list.c  test_map.c  test_queue.c  test_set.c  test_stack.c
tests/Parsers/: test_json.c
